src/ui/snapshots/coxtop__ui__initiative_drill__tests__renders_initiative_snapshot_in_the_regatta_theme.snap
---
source: src/ui/initiative_drill.rs
assertion_line: 205
expression: terminal.backend().to_string()
---
"┌Initiative dash-feed-streams-a-versioned-json-snapshot-of─────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌p1-foundations landed 22:10───────────────────────────────────────────────────────────────────────────────────────────┐"
"│dash-feed-streams-a-versioned-json-snapshot-of-feed-schema done                                                       │"
"│dash-feed-streams-a-versioned-json-snapshot-of-feed-writer done                                                       │"
"│  <- dash-feed-streams-a-versioned-json-snapshot-of-feed-schema                                                       │"
"│ERROR: needs edge inside phase p1-foundations                                                                         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌p2-cli not landed─────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│dash-feed-streams-a-versioned-json-snapshot-of-cli-flag ready                                                         │"
"│  <- dash-feed-streams-a-versioned-json-snapshot-of-feed-schema                                                       │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌history───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│22:10 phase p1-foundations landed                                                                                     │"
"└] priority up  [ priority down  e edit  x remove──────────────────────────────────────────────────────────────────────┘"
